--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/upgrade/25463a4e-122e-48e3-8fb4-e74c28ba4d71'>Upgrade - Senior Site Reliability Engineer - SRE</a></h5> 
+<h5><a href='https://jobs.lever.co/upgrade/25463a4e-122e-48e3-8fb4-e74c28ba4d71'>Upgrade - Senior Site Reliability Engineer - SRE</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -146,11 +146,11 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/plex/job/o19pbfwu'>Plex Careers - Site Reliability Engineering Team Lead</a></h5> 
+<h5><a href='http://jobs.jobvite.com/plex/job/o19pbfwu'>Plex Careers - Site Reliability Engineering Team Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer---canada-1930466/'>Site Reliability Engineer - Canada | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer---canada-1930466/'>Site Reliability Engineer - Canada | Okta</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -257,7 +257,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/falcon/22144891-98dc-4593-9281-799580461583'>Falcon.io - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/22144891-98dc-4593-9281-799580461583'>Falcon.io - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -295,7 +295,7 @@ believes?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://nianticlabs.com/jobs/software-engineer-site-reliability/'>Software Engineer, Site Reliability ? Niantic</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nianticlabs.com/jobs/software-engineer-site-reliability/'>Software Engineer, Site Reliability ? Niantic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -316,7 +316,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=nXSFeMwZ'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=nXSFeMwZ'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
@@ -328,11 +328,11 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/moogsoft/80c734a7-014e-4ccf-b3da-9b74f218167b'>Moogsoft - Manager, Site Reliability Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/moogsoft/80c734a7-014e-4ccf-b3da-9b74f218167b'>Moogsoft - Manager, Site Reliability Engineering</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/blizzard/job/oj8lbfwH'>Blizzard Entertainment Careers - Senior Site Reliability Engineer, Embedded Games</a></h5> 
+<h5><a href='http://jobs.jobvite.com/blizzard/job/oj8lbfwH'>Blizzard Entertainment Careers - Senior Site Reliability Engineer, Embedded Games</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -364,7 +364,7 @@ Linux experience, network knowledge, scripting abilities, information security a
 Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 ?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bittitan/jobs/1921196'>Job Application for Site Reliability Engineer I  at BitTitan</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bittitan/jobs/1921196'>Job Application for Site Reliability Engineer I  at BitTitan</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -428,7 +428,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4410616002'>Job Application for Senior Site Reliability Engineer at Snowflake</a></h5> 
+<h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4410616002'>Job Application for Senior Site Reliability Engineer at Snowflake</a></h5> 
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
